# TrikeShed

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .gradlew.swp  .jules-reviewed  0001-Sandbox-GraalVM-JS-Context-in-ViewServer.patch  0001-examples-echo-server-handle-short-sends.patch  0001-feat-Add-GrpcClient-with-bidirectional-streaming-mod.patch  @PRELOAD.md  AGENTS.md  BENCHMARK_RESULTS.md  BOUNDARY_CONTRACT_SUMMARY.md  BUILD_GUIDE.md  CLAUDE.md  CLAUDE.summary.md  ConfixNavTest.kt  DESIGN.md  FORGE_HOWTO.md  GALLERY.md  HEURISTIC_EVALUATION.md  IPFS_INTEGRATION.md  IPFS_INTEGRATION_REFINED.md  ISAM3.md  JULES_INTEGRATION.md  JULES_TASK_TREES.md  JULES_TASK_TREES_EXTENDED.md  LICENSE  MutableSeries.md  NEW_BENCHMARK.md  NG_SCTP_TODO.md  NOTION_FORGE_TASKS.md  OCTOPUS_MERGE_TASK_TREES.md  OWNER.md  PACKAGE_JOBS.md  PRELOAD.md  README.md  RLM_SETUP.md  SKILL.md  SOUL.md  (+164 more)
.fanout/: plan.yaml
.github/: copilot-instructions.md
.hermes/: tdd-spec-asynccontext.md
__tests__/: classifier-helpers.test.ts
agent-flywheel/: flywheel.py  land.py  refill_queue.py  snapshot.sh  test_flywheel.py
brc/: README.md  calculate_average_baseline.sh  calculate_average_csv_native.sh  calculate_average_cursor.sh  calculate_average_cursor_native.sh  calculate_average_duckdb_jvm.sh  calculate_average_duckdb_native.sh  calculate_average_fixedpoint.sh  calculate_average_isam_jvm.sh  calculate_average_isam_native.sh  calculate_average_mmap.sh  calculate_average_parallel.sh  classpath.sh  create_measurements.sh  evaluate.sh  harness.sh  prepare.sh  results.md  results_1b.md  test.sh  test_fork.sh
conductor/: DRAWDOWN_DSEL_GUIDE.md  IMPLEMENTATION.md  WAM_CCEK_CHANNELIZATION_RECOVERY.md  grok_share_bGVnYWN5_21edd44f-9e25-434b-9bcb-2d036feee2dc.md  product.md  tech-stack.md  tracks.md  workflow.md
doc/: INDEX.md  (+17 more)
libs/tspy/: README.md  pyproject.toml  test_graalpy_integration.py
libs/tspy/src/python/tspy/: __init__.py  keymux.py  modelmux.py
libs/tspy/src/python/tspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
libs/tspy/src/python/tspy/algebra/: __init__.py
libs/tspy/src/python/tspy/chronicle/: __init__.py
libs/tspy/src/python/tspy/cursor/: __init__.py
libs/tspy/src/python/tspy/isam/: __init__.py  data_file.py  meta.py  meta_file.py  record_meta.py  wire_proto.py
libs/tspy/src/python/tspy/kanban/: __init__.py  idioms.py
libs/tspy/src/python/tspy/polyglot/: __init__.py
libs/tspy/tests/: test_algebra.py
libs/tspy/tspy/: __init__.py  cursor.py  join.py  literals.py  operators.py  series.py
libs/tspy/tspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
modelmux/: .env.default  Cargo.toml
modelmux/src/config/: mod.rs
modelmux/src/core/: mod.rs  types.rs
modelmux/src/keymux/: lib.rs
(+4947 files in other folders)
