[package]
name = "modelmux"
version = "0.1.0"
edition = "2021"
description = "Model Multiplexer - OpenAI-compatible proxy gateway with KeyMux key management and DSEL quota-aware routing"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-channel = "2.1"
futures = "0.3"

# HTTP & serialization
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
log = "0.4"
env_logger = "0.11"

# Configuration
dotenvy = "0.15"
dirs = "5.0"
config = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde", "fast-rng"] }
parking_lot = "0.12"
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
ring = "0.17"
base64 = "0.22"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"

[[bin]]
name = "keymux"
path = "src/keymux/main.rs"

[[bin]]
name = "modelmux"
path = "src/modelmux/main.rs"

[[bin]]
name = "modelmux-reactor"
path = "src/reactor/main.rs"

[features]
default = []
full = ["metrics"]
metrics = ["metrics-exporter-prometheus"]