[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tspy"
version = "0.1.0"
description = "TrikeShed Python algebra — tuple-native kernel algebra, cursor, pointcut, chronicle"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "TrikeShed", email = "trikeshed@nousresearch.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["trikeshed", "algebra", "series", "cursor", "pointcut", "chronicle"]
dependencies = [
    # Zero dependencies — stdlib only
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyright>=1.1",
]

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["tspy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"